Fixed layout issue in Safari (#7)
* Fixed layout issue in Safari

* Fixed header issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,5 @@
 
 .app {
-  height: 100%;
   min-height: 100%;
   display: flex;
   flex-direction: column;
@@ -8,7 +7,8 @@
   $maxScrollWidth: 34px;
 
   &__header {
-    flex: 0 0 60px;
+    height: 60px;
+    flex: 0 0 auto;
     background-color: white;
     padding-right: calc(#{$maxScrollWidth} - 100vw + 100%);
   }
